Fixed a collapsed layout

--- a/src/styles/standard-color.css
+++ b/src/styles/standard-color.css
@@ -16,6 +16,7 @@
 
 .color-palette-standard-colors-row {
   list-style: none;
+  margin: 0;
   padding: 0 0 0 1px;
 }
 
